Update to CSS path

--- a/lab/Week03/resume_v2.html
+++ b/lab/Week03/resume_v2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
         <title>Andrew J. Baron's Resume</title>
-    <link rel="stylesheet" href="C:\Users\LS6485\Downloads\Week03\style_v2.css">
+    <link rel="stylesheet" href="style_v2.css">
 </head>
 	
 <body>
